--- a/events.html
+++ b/events.html
@@ -83,12 +83,12 @@
     <div class="pure-g-r event-row">
         <div style="background-image: url('images/event1.jpg');" class="pure-u-1-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2012 Welcome Week Tabling</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2013 Berkeley Thai Reception Dinner</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Sproul Plaza, UC Berkeley</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 24th, 2013 7-8:30PM</span></div>
-                        <div class="link"><a href="facebook.com">photos</a><a href="facebook.com">info</a></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Theptarin Hospital Grand Hall</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">June 15, 2013 6:00PM</span></div>
+                        <div class="link"><a href="https://www.facebook.com/events/304573436343418/?ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/304573436343418/?ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
             </div>
@@ -96,12 +96,12 @@
 
         <div style="background-image: url('images/event3.jpg');" class="pure-u-1-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2012 Welcome Week Tabling</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>Thai Night 2013</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Sproul Plaza, UC Berkeley</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 24th, 2013 7-8:30PM</span></div>
-                        <div class="link"><a href="facebook.com">photos</a><a href="facebook.com">info</a></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Alumni House, UC Berkeley</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">April 6, 2013 7:00PM</span></div>
+                        <div class="link"><a href="https://www.facebook.com/events/140088526164385/?ref=2&ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/140088526164385/?ref=2&ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
             </div>
@@ -109,12 +109,12 @@
 
         <div style="background-image: url('images/event1.jpg');" class="pure-u-1-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2012 Welcome Week Tabling</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>New Students Welcome Lunch</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Sproul Plaza, UC Berkeley</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 24th, 2013 7-8:30PM</span></div>
-                        <div class="link"><a href="facebook.com">photos</a><a href="facebook.com">info</a></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Wa Sho Ku, Bangkok</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">June 22, 2013 2:00PM</span></div>
+                        <div class="link"><a href="https://www.facebook.com/events/469852979765539/?ref=2&ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/469852979765539/?ref=2&ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
             </div>
@@ -124,12 +124,12 @@
     <div class="pure-g-r event-row">
         <div style="background-image: url('images/event2.jpg');" class="pure-u-2-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2012 Welcome Week Tabling</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>UC Berkeley and UCLA Intercollegiate Dinner</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Sproul Plaza, UC Berkeley</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 24th, 2013 7-8:30PM</span></div>
-                        <div class="link"><a href="facebook.com">photos</a><a href="facebook.com">info</a></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Manna, Bangkok</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 8, 2013 6:00PM</span></div>
+                        <div class="link"><a href="https://www.facebook.com/events/503224403089212/?ref=2&ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/503224403089212/?ref=2&ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
             </div>
@@ -137,12 +137,12 @@
 
         <div style="background-image: url('images/event3.jpg');" class="pure-u-1-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2012 Welcome Week Tabling</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>ThaiSA Meet and Greet BBQ</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Sproul Plaza, UC Berkeley</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 24th, 2013 7-8:30PM</span></div>
-                        <div class="link"><a href="facebook.com">photos</a><a href="facebook.com">info</a></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Tilden Park, UC Berkeley</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 25, 2013 12:00PM</span></div>
+                        <div class="link"><a href="https://www.facebook.com/events/562459060469742/?ref=2&ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/562459060469742/?ref=2&ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
             </div>
