--- a/officers.html
+++ b/officers.html
@@ -93,7 +93,7 @@
     </div> <!-- officers-row -->
     <div class="row officers-row">
         <div class="span4 officer">
-            <div style="background-image: url('hhttps://scontent-a-sjc.xx.fbcdn.net/hphotos-prn2/1377494_10151954000230011_1077693696_n.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://scontent-a-sjc.xx.fbcdn.net/hphotos-prn2/1377494_10151954000230011_1077693696_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Natnicha Vanitchanant</div>
                 <div class="text officer-position">Secretary</div>
@@ -111,7 +111,7 @@
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
-            <div style="background-image: url('https://sphotos-a-sjc.xx.fbcdn.net/hphotos-ash3/1150271_10151867988765011_358964291_n.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://scontent-b-sjc.xx.fbcdn.net/hphotos-prn2/1394317_10151954012235011_1037929736_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Panthita Punyaneramitdee</div>
                 <div class="text officer-position">Outreach Director</div>
@@ -140,7 +140,7 @@
             </div>
         </div> <!-- officer -->
         <div class="span4 officer">
-            <div style="background-image: url('https://sphotos-a-sjc.xx.fbcdn.net/hphotos-ash3/551441_10151628273075962_1201056249_n.jpg');" class="officer-picture"></div>
+            <div style="background-image: url('https://scontent-b-sjc.xx.fbcdn.net/hphotos-prn2/1385058_10151954012240011_2127642392_n.jpg');" class="officer-picture"></div>
             <div class="officer-content">
                 <div class="text officer-name">Kavin Phongpandecha</div>
                 <div class="text officer-position">Webmaster</div>
