--- a/events.html
+++ b/events.html
@@ -81,39 +81,39 @@
 
 <div class="container-fluid events-container">
     <div class="pure-g-r event-row">
-        <div style="background-image: url('images/event1.jpg');" class="pure-u-1-3 event">
+        <div style="background-image: url('https://scontent-b-sjc.xx.fbcdn.net/hphotos-frc3/1382250_10151954039215011_567655898_n.jpg');" class="pure-u-1-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2013 Berkeley Thai Reception Dinner</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2013 Berkeley Thai Alumni Dinner</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Theptarin Hospital Grand Hall</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">June 15, 2013 6:00PM</span></div>
-                        <div class="link"><a href="https://www.facebook.com/events/304573436343418/?ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/304573436343418/?ref_dashboard_filter=calendar">info</a></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Theptarin Hospital Grand Hall (Bangkok, Thailand)</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">June 15, 2013</span></div>
+                        <div class="link"><a href="https://www.facebook.com/media/set/?set=a.175953995914792.1073741828.174657169377808&type=3">photos</a><a href="https://www.facebook.com/events/304573436343418/?ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div style="background-image: url('images/event3.jpg');" class="pure-u-1-3 event">
+        <div style="background-image: url('https://scontent-a-sjc.xx.fbcdn.net/hphotos-ash3/1374289_10151954031100011_1543749072_n.jpg');" class="pure-u-1-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>Thai Night 2013</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2013 Thai Night</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Alumni House, UC Berkeley</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">April 6, 2013 7:00PM</span></div>
-                        <div class="link"><a href="https://www.facebook.com/events/140088526164385/?ref=2&ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/140088526164385/?ref=2&ref_dashboard_filter=calendar">info</a></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Alumni House (UC Berkeley)</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">April 6, 2013</span></div>
+                        <div class="link"><a href="https://www.facebook.com/media/set/?set=oa.10151534877712748&type=1">photos</a><a href="https://www.facebook.com/events/140088526164385/?ref=2&ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div style="background-image: url('images/event1.jpg');" class="pure-u-1-3 event">
+        <div style="background-image: url('https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash4/s720x720/530_10151286038140011_289114979_n.jpg');" class="pure-u-1-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>New Students Welcome Lunch</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2013-2014 New Student Welcome Lunch</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Wa Sho Ku, Bangkok</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">June 22, 2013 2:00PM</span></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Washoku Restaurant (Bangkok, Thailand)</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">June 22, 2013</span></div>
                         <div class="link"><a href="https://www.facebook.com/events/469852979765539/?ref=2&ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/469852979765539/?ref=2&ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
@@ -122,27 +122,27 @@
     </div>
 
     <div class="pure-g-r event-row">
-        <div style="background-image: url('images/event2.jpg');" class="pure-u-2-3 event">
+        <div style="background-image: url('https://scontent-a-sjc.xx.fbcdn.net/hphotos-ash3/1380013_10151954033870011_1248195989_n.jpg');" class="pure-u-2-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>UC Berkeley and UCLA Intercollegiate Dinner</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>UCB, UCLA Intercollegiate Dinner</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Manna, Bangkok</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 8, 2013 6:00PM</span></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Manna Restaurant (Bangkok, Thailand)</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 8, 2013</span></div>
                         <div class="link"><a href="https://www.facebook.com/events/503224403089212/?ref=2&ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/503224403089212/?ref=2&ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div style="background-image: url('images/event3.jpg');" class="pure-u-1-3 event">
+        <div style="background-image: url('https://scontent-b-sjc.xx.fbcdn.net/hphotos-frc3/1385366_10151954042820011_465752261_n.jpg');" class="pure-u-1-3 event">
             <div class="event-text-container">
-                <div class="event-title"><i class="title-arrow icon-caret-up"></i>ThaiSA Meet and Greet BBQ</div>
+                <div class="event-title"><i class="title-arrow icon-caret-up"></i>2013-2014 Meet and Greet BBQ</div>
                 <div class="event-subtitle">
                     <div class="event-subtitle-content">
-                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Tilden Park, UC Berkeley</span></div>
-                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 25, 2013 12:00PM</span></div>
-                        <div class="link"><a href="https://www.facebook.com/events/562459060469742/?ref=2&ref_dashboard_filter=calendar">photos</a><a href="https://www.facebook.com/events/562459060469742/?ref=2&ref_dashboard_filter=calendar">info</a></div>
+                        <div class="location"><i class="icon-compass"></i><span class="subtitle-text">Tilden Park (UC Berkeley)</span></div>
+                        <div class="time"><i class="icon-calendar-empty"></i><span class="subtitle-text">August 25, 2013</span></div>
+                        <div class="link"><a href="https://www.facebook.com/media/set/?set=a.196834170493441.1073741830.174657169377808&type=3">photos</a><a href="https://www.facebook.com/events/562459060469742/?ref=2&ref_dashboard_filter=calendar">info</a></div>
                     </div>
                 </div>
             </div>
