--- a/events.html
+++ b/events.html
@@ -59,18 +59,18 @@
 
                 <!-- Featured Event 1 -->
                 <div class="span6 featured-text">
-                    <div class="name">TBA</div>
-                    <div class="time"><i class="icon-calendar-empty"></i>TBA</div>
-                    <div class="location"><i class="icon-compass"></i>TBA</div>
+                    <div class="name">EAU Food SALE</div>
+                    <div class="time"><i class="icon-calendar-empty"></i>October 24, 2013 7PM</div>
+                    <div class="location"><i class="icon-compass"></i>Upper Sproul (UC Berkeley)</div>
                     <div class="description">TBA</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- featured-text -->
 
                 <!-- Featured Event 2 -->
                 <div class="span6 featured-text">
-                    <div class="name">TBA</div>
-                    <div class="time"><i class="icon-calendar-empty"></i>TBA</div>
-                    <div class="location"><i class="icon-compass"></i>TBA</div>
+                    <div class="name">SF Scavenger Hunt Extravaganza</div>
+                    <div class="time"><i class="icon-calendar-empty"></i>August 19, 2013 10AM</div>
+                    <div class="location"><i class="icon-compass"></i>San Francisco</div>
                     <div class="description">TBA</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- eatured-text -->
@@ -107,7 +107,7 @@
             </div>
         </div>
 
-        <div style="background-image: url('https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash4/s720x720/530_10151286038140011_289114979_n.jpg');" class="pure-u-1-3 event">
+        <div style="background-image: url('https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash4/s720x720/530_10151286038140011_289114979_n.jpg ');" class="pure-u-1-3 event">
             <div class="event-text-container">
                 <div class="event-title"><i class="title-arrow icon-caret-up"></i>2013-2014 New Student Welcome Lunch</div>
                 <div class="event-subtitle">
