thai tea caption

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="events-banner-container row">
         <div class="span12 events-banner">
             <p class="banner">Come visit ThaiSA at the Welcome Week Banquet this weekend (August 31st, 2013) @ 155 Dwinelle Hall 7PM</p>
-            <p class="banner" style="display: none;">We make the best Thai iced tea on campus!</p>
+            <p class="banner" style="display: none;">We hold awesome events!</p>
         </div>
     </div>
 
