--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <!-- About Content -->
     <div class="row about-text-container">
         <div class="span6">
-            <div class="text-header who">Who Are We</div>
+            <div class="text-header who">Who We Are</div>
             <div class="text-content">Welcome to the UC Berkeley Thai Students Association (ThaiSA)! Founded in 90’s, ThaiSA is a cultural, professional, and social student organization at UC Berkeley. ThaiSA members are united by a common interest in Thailand, whether through a cultural, academic, professional and/or social perspective. As such, ThaiSA’s activities range from regular educational, social and cultural events aimed at the campus community to professional networking events with UC Berkeley alumni in Thailand. ThaiSA also seeks to maintain cooperative ties with other cultural organizations on campus as well as other Thai student organizations and Thai communities across the United States of America. ThaiSA is open to everyone and we would love to hear from you and see you at our events!</div>
         </div>
 
