majors and events

--- a/events.html
+++ b/events.html
@@ -59,10 +59,10 @@
 
                 <!-- Featured Event 1 -->
                 <div class="span6 featured-text">
-                    <div class="name">EAU Food SALE</div>
+                    <div class="name">EAU Food Sale</div>
                     <div class="time"><i class="icon-calendar-empty"></i>October 24, 2013 7PM</div>
                     <div class="location"><i class="icon-compass"></i>Upper Sproul (UC Berkeley)</div>
-                    <div class="description">TBA</div>
+                    <div class="description">Stay tuned!</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- featured-text -->
 
@@ -71,7 +71,7 @@
                     <div class="name">SF Scavenger Hunt Extravaganza</div>
                     <div class="time"><i class="icon-calendar-empty"></i>August 19, 2013 10AM</div>
                     <div class="location"><i class="icon-compass"></i>San Francisco</div>
-                    <div class="description">TBA</div>
+                    <div class="description">Stay tuned!</div>
                     <div class="link"><a href="facebook.com">rsvp</a><a href="facebook.com">event info</a></div>
                 </div> <!-- eatured-text -->
             </div>
