--- a/officers.html
+++ b/officers.html
@@ -77,7 +77,7 @@
             <div class="officer-content">
                 <div class="text officer-name">Nopphon Siranart</div>
                 <div class="text officer-position">Internal Vice President</div>
-                <div class="text officer-subtitle">Computer Science 2016</div>
+                <div class="text officer-subtitle">Mathematics and Statistics 2016</div>
                 <div class="text officer-description">Hi everyone! I am Bon. My friends sometimes call me Balls though. Nice to meet you all and hope you guys enjoy being a part of ThaiSA and all ThaiSA activities in the upcoming year. Looking forward to meeting you all.</div>
             </div>
         </div> <!-- officer -->
@@ -86,7 +86,7 @@
             <div class="officer-content">
                 <div class="text officer-name">Zad Fourth</div>
                 <div class="text officer-position">External Vice President</div>
-                <div class="text officer-subtitle">Environmental Science 2016</div>
+                <div class="text officer-subtitle">Environmental Science 2014</div>
                 <div class="text officer-description">I'm fully Thai. I love Thailand. I love animals. Right now, I'm also a research student in the Museum of Vertebrate Zoology. My focused area is to work on marine mammals in Thailand. So, anything about Thailand, ask me! I would love to share. Love you! Jub jub! รักพ่อรักแม่ รักเพื่อนๆและพี่น้องทุกคน ฉันรู้สึกภูมิใจที่ฉันได้เกิดมาเป็นคนไทย เกิดบนแผ่นดินไทย และสุดท้ายฉันอยากจะบอกว่าฉันรักประเทศไทย</div>
             </div>
         </div> <!-- officer -->
@@ -115,7 +115,7 @@
             <div class="officer-content">
                 <div class="text officer-name">Panthita Punyaneramitdee</div>
                 <div class="text officer-position">Outreach Director</div>
-                <div class="text officer-subtitle">Pre-Business 2016</div>
+                <div class="text officer-subtitle">Economics 2016</div>
                 <div class="text officer-description">Hey all! My name is Panpan. I will be your Outreach Director, but I am more willing to help with other work or help out with any problems. I enjoy keeping myself busy, doing activities, meeting people, playing guitar, playing basketball, and etc. If those activities are what you like to do, then hit me up!</div>
             </div>
         </div> <!-- officer -->
